# canml

./: .gitignore  .readthedocs.yml  DEVELOPMENT_GUIDE.md  README.MD  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish.yml
canml/: __init__.py  canmlio.py
canmlio/: __init__.py
docs/: Makefile  requirements.txt
docs/source/: canml.canmlio.rst  canml.rst  conf.py  index.rst  modules.rst
examples/: __init__.py  generate_blf.py
tests/: __init__.py  generate_blf.py  test.dbc  test_integration_canmlio.py  test_iter_blf_chunks.py  test_load_blf.py
