[project]
name = "canml"
version = "0.1.0p2"
description = "Decode CAN BLF logs using DBC files into pandas DataFrames and export to CSV"
readme = { file = "README.MD", content-type = "text/markdown" }
authors = [
  { name = "Cosmin B. Memetea", email = "cosmin.memetea@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "cantools==39.4.4",
  "python-can==4.4.0",
  "pandas==2.2.2",
  "numpy==1.26.4"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "coverage",
  "codecov",
  "twine",
  "build"
]

# Project links that show up on PyPI
urls = { 
  Homepage = "https://github.com/cosminmemetea/canml",
  Documentation = "https://canml.readthedocs.io/",
  Source = "https://github.com/cosminmemetea/canml",
  Tracker = "https://github.com/cosminmemetea/canml/issues"
}

# Classifiers power search & badges on PyPI
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

# Tell setuptools to find your canml package
[tool.setuptools.packages.find]
where = ["."]
include = ["canml", "canml.*"]
