[project]
name = "canml"
version = "0.1.1"
description = "Decode CAN BLF logs using DBC files into pandas DataFrames and export to CSV"
readme = { file = "README.MD", content-type = "text/markdown" }
authors = [
  { name = "Cosmin B. Memetea", email = "cosmin.memetea@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "cantools==39.4.4",
  "python-can==4.4.0",
  "pandas==2.2.2",
  "numpy==1.26.4"
]

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "coverage",
  "codecov",
  "twine",
  "build"
]

[project.urls]
Homepage      = "https://github.com/cosminmemetea/canml"
Documentation = "https://canml.readthedocs.io/"
Source        = "https://github.com/cosminmemetea/canml"
Tracker       = "https://github.com/cosminmemetea/canml/issues"

[project.classifiers]
# PEP 621 expects classifiers as an array, not a separate table;
# but setuptools will pick them up from here.
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering :: Information Analysis"
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.packages.find]
where = ["."]
include = ["canml", "canml.*"]
